fix in pom